# Htkis-LANProxySerCli

./: .gitignore  CMakeLists.txt  README.md  build.ps1  deploy.sh  imgui.ini  install_v2rayn.sh  setup_env.ps1
config/: default_system.json.template
data/: builtin_rules.json  custom_rules.json  default_users.json
docs/: DEPLOY.md  USAGE.md
src/: main.cpp
src/client/: Client.cpp  Client.h  GuiMain.cpp  main.cpp
src/common/: Localization.cpp  Localization.h  Protocol.h  protocol.h  socks5.h  ui.h
src/concurrency/: concurrency_metrics.cpp  concurrency_metrics.h  connection_admitter.cpp  connection_admitter.h  connection_registry.cpp  connection_registry.h  failover_handler.cpp  failover_handler.h  ip_affinity_table.cpp  ip_affinity_table.h  load_balancer.cpp  load_balancer.h  node_health_checker.cpp  node_health_checker.h  overload_protector.cpp  overload_protector.h  rate_limiter.cpp  rate_limiter.h  system_tuner.cpp  system_tuner.h  timeout_scanner.cpp  timeout_scanner.h
src/config_manager/: config_loader.cpp  config_loader.h
src/log_monitor/: audit_logger.cpp  audit_logger.h  metrics_collector.cpp  metrics_collector.h  structured_logger.cpp  structured_logger.h  ws_sink.cpp  ws_sink.h
src/proxy_core/: protocol.h  server.cpp  session.cpp  session.h
src/route_decision/: dns_cache.cpp  dns_cache.h  domain_matcher.cpp  domain_matcher.h  geoip_resolver.cpp  geoip_resolver.h  route_engine.cpp  route_engine.h  rule_manager.cpp  rule_manager.h
src/server/: GuiMain.cpp  Logger.h  Server.cpp  Server.h  UserManager.cpp  UserManager.h  main.cpp  resource.h  resource.rc
src/user_manager/: password_hasher.cpp  password_hasher.h  user_manager.cpp  user_manager.h
src/v2rayn_manager/: v2rayn_config.cpp  v2rayn_config.h  v2rayn_process.cpp  v2rayn_process.h  vm_config_builder.cpp  vm_config_builder.h  vm_link_codec.cpp  vm_link_codec.h  vm_node_manager.cpp  vm_node_manager.h  vm_node_validator.cpp  vm_node_validator.h
src/web_server/: api_router.cpp  api_router.h  auth_middleware.cpp  auth_middleware.h  crow_server.cpp  crow_server.h  jwt_util.cpp  jwt_util.h  ws_handler.cpp  ws_handler.h
systemd/: lan-proxy-gateway.service
tests/: test_base64_decode.cpp  test_jwt_standalone.cpp
web_ui/: index.html  package-lock.json  package.json  vite.config.ts
web_ui/src/: main.ts
web_ui/src/layouts/: MainLayout.vue
web_ui/src/locales/: en.json  index.ts  zh-CN.json
web_ui/src/router/: index.ts
web_ui/src/utils/: request.ts
web_ui/src/views/: Dashboard.vue  Login.vue  Logs.vue  Rules.vue  Settings.vue  Users.vue  V2rayN.vue
web_ui/src/views/vmess/: VmLinkImport.vue  VmNodeForm.vue  VmNodeList.vue
